tests/neg/type_error1.scala
class Main {
  val main = () => {
    val i = 0
    val f = 0.0
    i + f
  }
}